css/media.css
@media only screen and (min-width: 360px) {

}
@media only screen and (min-width: 480px) {
	.topLeaves {
	}

}
@media only screen and (min-width: 480px) {

}
@media only screen and (min-width: 780px) {
	.topLeaves {
	}

	.stream {
		left: 5%;
	}
}
@media only screen and (min-width: 992px) {
	.topLeaves {
	}
	.stream {
		left: 15%;
	}
	.tree2 {
		display: block;
	}
	.fullPic {
		width: 50%;
		margin: 25px;
		border: 1px solid black;
	}
	.projectSlideshow {
		float: left;
	}
}
@media only screen and (min-width: 1200px) {
	.topLeaves {
	}
	.stream {
		left: 25%;
	}
}
@media only screen and (min-width: 1550px) {
	.topLeaves {
	}
	.stream {
		left: 35%;
	}
}

/******************** VERTICAL HEIGHTS ********************/

@media only screen and (min-height: 250px) {

}
@media only screen and (min-height: 500px) {
	.fire {
	}
}
@media only screen and (min-height: 600px) {
	.fire {
		bottom: 15%;
	}
}

@media only screen and (min-height: 900px) {
	.fire {
		bottom: 35%;
	}
	.tree3 {
		display: block;
	}
}

/******************** DISPLAYING THE FOREST ********************/

@media only screen and (min-width: 650px) and (min-height: 500px) {
	.forest {
		display: block;
	}
}
@media only screen and (min-width: 900px) and (min-height: 500px) {
	.forest2 {
		display: block;
	}
}
@media only screen and (min-width: 1400px) and (min-height: 500px) {
	.forest3 {
		display: block;
	}
}

